K8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: myflask-web.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-service
            port: 
              number: 8000
